
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4 (2003-04-19) ----

2003-04-19, Rob Hillis
  More work for sorting of bins: create and search menus
    - zentrack/includes/templates/newTicketForm.php 1.24
    - zentrack/includes/templates/newProjectForm.php 1.20
    - zentrack/includes/templates/searchForm.php 1.6
  Fix bins.php to remove syntax error
    - zentrack/www/admin/bins.php 1.5

2003-04-18, Kato
  Revised issue with users moving tickets (header.php not found error)
    - zentrack/www/ticket.php 1.15
  Added swedish translation
    - zentrack/includes/translations/swedish.trans 1.2
  Updated "log" action in egate, and cleaned up a bit
    - zentrack/includes/egate_utils.php 1.26
  Updated email logic to email appropriate users, even if not on notify list
    - zentrack/includes/zenTrack.class 1.90
  Cache the priority pulldown in admin screens for speed
  sped up systems screen for users with massive numbers of systems
    - zentrack/includes/templates/configForm.php 1.3
    - zentrack/www/admin/admin_header.php 1.10
    - zentrack/www/admin/systems.php 1.5  
  Fixed outdated access checking (displays bins according to proper permissions now)
    - zentrack/includes/leftBins.php 1.6
  
2003-04-18, MLively
  Added new diff utility for translations
    - devtools/transdiff.php 1.1
  Update the tr-parser to be a bit more inclusive
    - devtools/tr-parser.php 1.2
  Added new entries to the current translation files
    - zentrack/includes/translations/french.trans 1.2
    - zentrack/includes/translations/german.trans 1.2
    - zentrack/includes/translations/spanish.trans 1.2

2003-04-18, Rob Hillis
  Work for sorting of bins: create and search menus
    - zentrack/includes/templates/newTicketForm.php 1.23