@@ -14,19 +14,19 @@
   $expand_options = 1;
   if( isset($TODO) && $TODO == 'BIN' ) {
     $params = "";
-    $homebin = ereg_replace("[^0-9]", "", $homebin);
-    if( !isset($homebin) || !$zen->bins["$homebin"] ) {
+    $homebin = ereg_replace("[^0-9]-", "", $homebin);
+    if( !isset($homebin) || (!$zen->bins["$homebin"] && $homebin != "all")) {
       $errs[] = tr("That bin doesn't exist");
     } else {
       $params = array( "homebin"=>$homebin );
       $res = $zen->update_user($login_id, $params);
       if( !$res ) {
-	$errs[] = tr("System Error: Unable to update bin.");
+         $errs[] = tr("System Error: Unable to update bin.");
       } else {
-	$skip = 1;
-	$hb = ( !$homebin )? "-" . tr("All") . "-" : $zen->bins["$homebin"];
-	$msg = tr("Your bin has been changed to") . " $hb";
-	$login_bin = $homebin;
+         $skip = 1;
+         $hb = ( $homebin == 'all' )? "-" . tr("All") . "-" : $zen->bins["$homebin"];
+         $msg = tr("Your bin has been changed to") . " $hb";
+         $login_bin = $homebin;
       }
     }
   }
